Fixed an overflow issue on the right panel view. Fixed the height in the right panel view.

--- a/FrontEnd/Modules/DynamicItems/Css/DynamicItems.css
+++ b/FrontEnd/Modules/DynamicItems/Css/DynamicItems.css
@@ -161,12 +161,12 @@ body.gridViewMode #mainScreenForm {
     background-color: #EEEEEE;
 }
 
-    #right-pane .pane-content {
-        border: 0;
-        margin: 0;
-        padding: 0;
-        height: 100%
-    }
+#right-pane .pane-content {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    height: fit-content;
+}
 
 /** ICONS **/
 .k-sprite {
